[package]
name = "geyser"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
rand = "0.8.4"
solana-geyser-plugin-interface = "1.13.3"
solana-program = "=1.13.3"
solana-logger= "1.13.3"
solana-metrics= "1.13.3"
solana-measure= "1.13.3"
solana-account-decoder = "=1.13.3"
solana-sdk = "1.13.3"
solana-client = "1.13.3"
log = "0.4.14"
chrono = { version = "0.4.11", features = ["serde"] }
crossbeam-channel = "0.5"
serde = "1.0.133"
serde_derive = "1.0.103"
serde_json = "1.0.74"
thiserror = "1.0.30"
borsh = "0.9.0"
libmath = "0.2.1"
num-derive = "0.3"
num-traits = "0.2"
num = "0.4"
tokio = "1.21.2"
void = "1.0.2"
tonic = "0.8.2"
prost = "0.11.0"
protoc = "2.28.0"
tokio-stream = "0.1.11"

[build-dependencies]
tonic-build = "0.8.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
